Criado arquivos de build para publicação na nuvem